--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,21 @@
-GITHUB_TOKEN=TOKEN
-GITHUB_ORGANIZATION=LargeNoRepos
+GITHUB_TOKEN=<pat_token>
+GITHUB_ORGANIZATION=<org_name>
 
-GIT_NAME=PR-Process
-GIT_EMAIL=admin@github.com
+GIT_NAME=<author_name>
+GIT_EMAIL=<author_email>
 
-REPO_LIST_FILE=repo_list.csv
-GITHUB_ACTION_PATH=.github/workflows/pr-process.yml
-ACTION_PATH=./data/pr-process.yml
-GITHUB_CONFIG_PATH=.github/pr_config.yml
-CONFIG_PATH=./data/pr_config.yml
+REPO_LIST_CSV=repo_list.csv
+FILE_LIST_CSV=file2github.csv
 
-GITHUB_BRANCH=["master", "integration"]
+#Instead of adding delete the files
+DEL_FILES=false
+
+#Branches to add to
+GITHUB_BRANCH=["main", "integration"]
+
+#Add even if Branch Protection Present
 GITHUB_BRANCH_PROTECTION_OVERRIDE=true
 
 # Set to `debug` to get additional info
 LOG_LEVEL=info
-
-LOG_LEVEL=info
+DEBUG_MODE=false
