Updating File and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
 # wildcards
 
-
 .DS_Store
 
 # Created by https://www.gitignore.io/api/node
 # Edit at https://www.gitignore.io/?templates=node
+
+
+### Project Specific ###
+.csv
+pr_config.yml
+pr-process.yml
 
 ### Node ###
 # Logs
